--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ window.FlexDashboardComponents = [];
 <script src="index_files/bs3compat-0.4.2/tabs.js"></script>
 <script src="index_files/bs3compat-0.4.2/bs3compat.js"></script>
 <link href="index_files/flexdashboard-css-0.6.1/flexdashboard-css.css" rel="stylesheet" />
+<script src="index_files/stickytableheaders-0.1.19/jquery.stickytableheaders.min.js"></script>
 <link href="index_files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="index_files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <script src="index_files/sly-1.6.1/sly.min.js"></script>
-<script src="index_files/stickytableheaders-0.1.19/jquery.stickytableheaders.min.js"></script>
 <style type="text/css">
 /*
   CSS for flexdashboard.js' use of Sly(). The sizing/position of this CSS needs to be
@@ -176,14 +176,10 @@ html, body {
 <img class="mobile-figure" data-mobile-figure-id=fig3 src="index_files/figure-html/unnamed-chunk-4-1.mb.png" />
 <img class="mobile-figure" data-mobile-figure-id=fig4 src="index_files/figure-html/unnamed-chunk-5-1.mb.png" />
 <img class="mobile-figure" data-mobile-figure-id=fig5 src="index_files/figure-html/unnamed-chunk-6-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig6 src="index_files/figure-html/unnamed-chunk-7-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig7 src="index_files/figure-html/unnamed-chunk-8-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig8 src="index_files/figure-html/unnamed-chunk-9-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig9 src="index_files/figure-html/unnamed-chunk-10-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig10 src="index_files/figure-html/unnamed-chunk-11-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig11 src="index_files/figure-html/unnamed-chunk-12-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig12 src="index_files/figure-html/unnamed-chunk-13-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig13 src="index_files/figure-html/unnamed-chunk-14-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig6 src="index_files/figure-html/self%20similarity%20matrix-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig7 src="index_files/figure-html/unnamed-chunk-7-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig8 src="index_files/figure-html/unnamed-chunk-8-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig9 src="index_files/figure-html/unnamed-chunk-9-1.mb.png" />
 <script type="text/javascript">
 
 
@@ -1875,40 +1871,10 @@ window.FlexDashboardComponents.push({
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<div id="tempograms" class="section level3">
-<h3>Tempograms</h3>
-</div>
-<div id="tempogram-1-elephant" class="section level3">
-<h3>Tempogram 1: elephant</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="576" data-figure-id=fig1 /></p>
-</div>
-<div id="tempogram-2-borderline" class="section level3">
-<h3>Tempogram 2: borderline</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<p><img src="index_files/figure-html/unnamed-chunk-3-1.png" width="576" data-figure-id=fig2 /></p>
-<hr />
-<p>(It didn’t work putting the plots on the same page nor on the front
-page, I don’t know why).</p>
-<p>To analyze tempo, I used two typical songs from the different groups
-in my corpus. The first tempogram shows a number from before currents
-and the second shows one from after currents. It is interesting to note
-that the songs from before currents show more tempo changes than the
-songs after. Tempo changes could affect the extent to which a song can
-be considered accessible and danceable. The decrease in tempo changes in
-songs after currents could support the hypothesis.</p>
-</div>
-<div id="chordogram" class="section level3">
-<h3>Chordogram</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="576" data-figure-id=fig3 /></p>
-</div>
+<div id="introduction" class="section level1">
+<h1>Introduction</h1>
+<div id="column" class="section level2" data-width="500">
+<h2>Column</h2>
 <div
 id="does-the-genre-of-a-major-music-phenomenon-like-tame-impala-change-due-to-popularity"
 class="section level3">
@@ -1941,13 +1907,23 @@ Songs like Nangs and Gossip from that same album might be a bit off, as
 they could be better considered as ambient music and are hard to
 categorize in any of the aforementioned genres.</p>
 </div>
+</div>
+<div id="column-1" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="tatatatat" class="section level3">
+<h3>TATATATAT</h3>
+<p>tetetetetete</p>
+</div>
+</div>
+</div>
+<div id="visualisations" class="section level1 storyboard">
+<h1 class="storyboard">Visualisations</h1>
 <div id="a-first-visualisation" class="section level3">
 <h3>A first visualisation</h3>
-,,
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="576" data-figure-id=fig4 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="576" data-figure-id=fig1 /></p>
 <hr />
 <p>In this first, relatively simple plot, the music used in this corpus
 is divided into two categories. The left form includes all songs by Tame
@@ -1975,74 +1951,129 @@ because this category contains more songs.</p>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-6-1.png" width="576" data-figure-id=fig5 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-3-1.png" width="576" data-figure-id=fig2 /></p>
 <hr />
+<p>hfkhkanjbgkbnsjkBajkjv</p>
 </div>
-<div id="chromagram-test" class="section level3">
-<h3>Chromagram test</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-7-1.png" width="576" data-figure-id=fig6 /></p>
-<hr />
+<div id="chromagrammmmmmm" class="section level1">
+<h1>Chromagrammmmmmm</h1>
+<div id="column-2" class="section level2" data-width="500">
+<h2>Column</h2>
 <p>Here is a chromagram of the song Lost in Yesterday. In this song from
 Tame Impala’s latest album, there are clear characteristics of disco,
 synth-pop and funk in addition to psychedelic influences.</p>
 </div>
-<div id="chromagram-test-1" class="section level3">
-<h3>Chromagram test</h3>
+<div id="column-3" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="chromagram-1" class="section level3">
+<h3>Chromagram 1</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" width="576" data-figure-id=fig7 /></p>
-<hr />
-<p>Does this work?</p>
+<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="576" data-figure-id=fig3 /></p>
 </div>
-<div id="ceptrogram" class="section level3">
+<div id="chromagram-2" class="section level3">
+<h3>Chromagram 2</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="576" data-figure-id=fig4 /></p>
+</div>
+</div>
+</div>
+<div id="ceptrogram" class="section level1">
+<h1>Ceptrogram</h1>
+<div id="column-4" class="section level2" data-width="500">
+<h2>Column</h2>
+<p>hfsghKZg</p>
+</div>
+<div id="column-5" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="ceptrogram-1" class="section level3">
 <h3>Ceptrogram</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-9-1.png" width="576" data-figure-id=fig8 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-6-1.png" width="576" data-figure-id=fig5 /></p>
 </div>
+</div>
+</div>
+<div id="ssm" class="section level1">
+<h1>SSM</h1>
+<div id="column-6" class="section level2" data-width="500">
+<h2>Column</h2>
+<p>hfsghKZg</p>
+</div>
+<div id="column-7" class="section level2" data-width="500">
+<h2>Column</h2>
 <div id="self-similarity-matrix-ceptogram" class="section level3">
 <h3>Self similarity matrix: ceptogram</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-10-1.png" width="576" data-figure-id=fig9 /></p>
+<p><img src="index_files/figure-html/self%20similarity%20matrix-1.png" width="576" data-figure-id=fig6 /></p>
 </div>
-<div id="chordogram-1" class="section level3">
-<h3>Chordogram</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-11-1.png" width="576" data-figure-id=fig10 /></p>
 </div>
-<div id="tempograms-1" class="section level3">
-<h3>Tempograms</h3>
+<div id="tempograms" class="section level1">
+<h1>Tempograms</h1>
+<div id="column-8" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="tempo-shifts-as-an-indication-of-inaccessibility-of-music"
+class="section level3">
+<h3>Tempo shifts as an indication of (in)accessibility of music</h3>
+<p>To analyze tempo, I used two typical songs from the different groups
+in my corpus. The first tempogram shows a number from before currents
+and the second shows one from after currents. It is interesting to note
+that the songs from before currents show more tempo changes than the
+songs after. Tempo changes could affect the extent to which a song can
+be considered accessible and danceable. The decrease in tempo changes in
+songs after currents could support the hypothesis.</p>
 </div>
-<div id="tempogram-1-elephant-1" class="section level3">
+</div>
+<div id="column-9" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="tempogram-1-elephant" class="section level3">
 <h3>Tempogram 1: elephant</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-12-1.png" width="576" data-figure-id=fig11 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-7-1.png" width="576" data-figure-id=fig7 /></p>
 </div>
-<div id="tempogram-2-borderline-1" class="section level3">
+<div id="tempogram-2-borderline" class="section level3">
 <h3>Tempogram 2: borderline</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-13-1.png" width="576" data-figure-id=fig12 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" width="576" data-figure-id=fig8 /></p>
 </div>
-<div id="track-level-summary" class="section level3">
-<h3>Track level summary</h3>
+</div>
+</div>
+<div id="chordograms" class="section level1">
+<h1>Chordograms</h1>
+<div id="column-10" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="text" class="section level3">
+<h3>Text</h3>
+<p>hshhss</p>
+</div>
+</div>
+<div id="column-11" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="chordogram" class="section level3">
+<h3>Chordogram</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-14-1.png" width="576" data-figure-id=fig13 /></p>
-<hr />
+<p><img src="index_files/figure-html/unnamed-chunk-9-1.png" width="576" data-figure-id=fig9 /></p>
+</div>
+</div>
+</div>
+<div id="summm" class="section level1">
+<h1>SUMMM</h1>
+<div id="column-12" class="section level2" data-width="500">
+<h2>Column</h2>
 <p>In this visualization, you can see a comparison between the two
 groups within my chosen corpus: However, there is less variation than I
 expected beforehand in terms of timbre values. However, the second value
@@ -2050,10 +2081,36 @@ expected beforehand in terms of timbre values. However, the second value
 significantly different. I am going to delve further into what exactly
 this difference means and whether I can recognize it myself.</p>
 </div>
-<div id="conclusion" class="section level3">
+<div id="column-13" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="track-level-summary" class="section level3">
+<h3>Track level summary</h3>
+<p>Before_Currents &lt;- get_playlist_audio_features(
+““,”0zj7vBkFkrtkIy7bbiIDHT” ) |&gt; slice(1:30) |&gt;
+add_audio_analysis()</p>
+<p>After_Currents &lt;- get_playlist_audio_features(
+““,”2iF5St3YBr1AalBJFZK8uD” ) |&gt; slice(1:30) |&gt;
+add_audio_analysis()</p>
+<p>Tame_Impala &lt;- Before_Currents |&gt; mutate(genre = “Before
+currents”) |&gt; bind_rows(After_Currents |&gt; mutate(genre = “After
+currents”))</p>
+<p>Tame_Impala |&gt; mutate( timbre = map( segments, compmus_summarise,
+timbre, method = “mean” ) ) |&gt; select(genre, timbre) |&gt;
+compmus_gather_timbre() |&gt; ggplot(aes(x = basis, y = value, fill =
+genre)) + geom_violin() + scale_fill_viridis_d() + labs(x = “Spotify
+Timbre Coefficients”, y = ““, fill =”Genre”)</p>
+</div>
+</div>
+</div>
+<div id="conclusion" class="section level1">
+<h1>Conclusion</h1>
+<div id="column-14" class="section level2" data-width="1000">
+<h2>Column</h2>
+<div id="conclusion-1" class="section level3">
 <h3>Conclusion</h3>
-<hr />
 <p>Here I would write my overall conclusions so far</p>
+</div>
+</div>
 </div>
 
 </div>
@@ -2077,7 +2134,7 @@ $(document).ready(function () {
   FlexDashboard.init({
     fillPage: true,
     orientation: "columns",
-    storyboard: true,
+    storyboard: false,
     defaultFigWidth: 576,
     defaultFigHeight: 460,
     defaultFigWidthMobile: 360,
