--- a/index.html
+++ b/index.html
@@ -176,10 +176,11 @@ html, body {
 <img class="mobile-figure" data-mobile-figure-id=fig3 src="index_files/figure-html/unnamed-chunk-4-1.mb.png" />
 <img class="mobile-figure" data-mobile-figure-id=fig4 src="index_files/figure-html/unnamed-chunk-5-1.mb.png" />
 <img class="mobile-figure" data-mobile-figure-id=fig5 src="index_files/figure-html/unnamed-chunk-6-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig6 src="index_files/figure-html/self%20similarity%20matrix-1.mb.png" />
-<img class="mobile-figure" data-mobile-figure-id=fig7 src="index_files/figure-html/unnamed-chunk-7-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig6 src="index_files/figure-html/unnamed-chunk-7-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig7 src="index_files/figure-html/self%20similarity%20matrix-1.mb.png" />
 <img class="mobile-figure" data-mobile-figure-id=fig8 src="index_files/figure-html/unnamed-chunk-8-1.mb.png" />
 <img class="mobile-figure" data-mobile-figure-id=fig9 src="index_files/figure-html/unnamed-chunk-9-1.mb.png" />
+<img class="mobile-figure" data-mobile-figure-id=fig10 src="index_files/figure-html/unnamed-chunk-10-1.mb.png" />
 <script type="text/javascript">
 
 
@@ -1871,9 +1872,26 @@ window.FlexDashboardComponents.push({
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
+<div id="dendrogram" class="section level1">
+<h1>Dendrogram</h1>
+<div id="column" class="section level2" data-width="500">
+<h2>Column</h2>
+<p>hfsghKZg</p>
+</div>
+<div id="column-1" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="dendrogram-1" class="section level3">
+<h3>Dendrogram</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="576" data-figure-id=fig1 /></p>
+</div>
+</div>
+</div>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
-<div id="column" class="section level2" data-width="500">
+<div id="column-2" class="section level2" data-width="500">
 <h2>Column</h2>
 <div
 id="does-the-genre-of-a-major-music-phenomenon-like-tame-impala-change-due-to-popularity"
@@ -1908,7 +1926,7 @@ they could be better considered as ambient music and are hard to
 categorize in any of the aforementioned genres.</p>
 </div>
 </div>
-<div id="column-1" class="section level2" data-width="500">
+<div id="column-3" class="section level2" data-width="500">
 <h2>Column</h2>
 <div id="tatatatat" class="section level3">
 <h3>TATATATAT</h3>
@@ -1923,7 +1941,7 @@ categorize in any of the aforementioned genres.</p>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="576" data-figure-id=fig1 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-3-1.png" width="576" data-figure-id=fig2 /></p>
 <hr />
 <p>In this first, relatively simple plot, the music used in this corpus
 is divided into two categories. The left form includes all songs by Tame
@@ -1951,47 +1969,30 @@ because this category contains more songs.</p>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-3-1.png" width="576" data-figure-id=fig2 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="576" data-figure-id=fig3 /></p>
 <hr />
 <p>hfkhkanjbgkbnsjkBajkjv</p>
 </div>
 </div>
 <div id="chromagrammmmmmm" class="section level1">
 <h1>Chromagrammmmmmm</h1>
-<div id="column-2" class="section level2" data-width="500">
+<div id="column-4" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>Here is a chromagram of the song Lost in Yesterday. In this song from
 Tame Impala’s latest album, there are clear characteristics of disco,
 synth-pop and funk in addition to psychedelic influences.</p>
 </div>
-<div id="column-3" class="section level2" data-width="500">
+<div id="column-5" class="section level2" data-width="500">
 <h2>Column</h2>
 <div id="chromagram-1" class="section level3">
 <h3>Chromagram 1</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="576" data-figure-id=fig3 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="576" data-figure-id=fig4 /></p>
 </div>
 <div id="chromagram-2" class="section level3">
 <h3>Chromagram 2</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<p><img src="index_files/figure-html/unnamed-chunk-5-1.png" width="576" data-figure-id=fig4 /></p>
-</div>
-</div>
-</div>
-<div id="ceptrogram" class="section level1">
-<h1>Ceptrogram</h1>
-<div id="column-4" class="section level2" data-width="500">
-<h2>Column</h2>
-<p>hfsghKZg</p>
-</div>
-<div id="column-5" class="section level2" data-width="500">
-<h2>Column</h2>
-<div id="ceptrogram-1" class="section level3">
-<h3>Ceptrogram</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -1999,30 +2000,47 @@ synth-pop and funk in addition to psychedelic influences.</p>
 </div>
 </div>
 </div>
-<div id="ssm" class="section level1">
-<h1>SSM</h1>
+<div id="ceptrogram" class="section level1">
+<h1>Ceptrogram</h1>
 <div id="column-6" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>hfsghKZg</p>
 </div>
 <div id="column-7" class="section level2" data-width="500">
 <h2>Column</h2>
+<div id="ceptrogram-1" class="section level3">
+<h3>Ceptrogram</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<p><img src="index_files/figure-html/unnamed-chunk-7-1.png" width="576" data-figure-id=fig6 /></p>
+</div>
+</div>
+</div>
+<div id="ssm" class="section level1">
+<h1>SSM</h1>
+<div id="column-8" class="section level2" data-width="500">
+<h2>Column</h2>
+<p>hfsghKZg</p>
+</div>
+<div id="column-9" class="section level2" data-width="500">
+<h2>Column</h2>
 <div id="self-similarity-matrix-ceptogram" class="section level3">
 <h3>Self similarity matrix: ceptogram</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/self%20similarity%20matrix-1.png" width="576" data-figure-id=fig6 /></p>
+<p><img src="index_files/figure-html/self%20similarity%20matrix-1.png" width="576" data-figure-id=fig7 /></p>
 </div>
 </div>
 </div>
 <div id="tempograms" class="section level1">
 <h1>Tempograms</h1>
-<div id="column-8" class="section level2" data-width="500">
+<div id="column-10" class="section level2" data-width="500">
 <h2>Column</h2>
-<div id="tempo-shifts-as-an-indication-of-inaccessibility-of-music"
+<div id="tempo-shifts-as-an-indication-of-accessibility-of-music"
 class="section level3">
-<h3>Tempo shifts as an indication of (in)accessibility of music</h3>
+<h3>Tempo shifts as an indication of accessibility of music</h3>
 <p>To analyze tempo, I used two typical songs from the different groups
 in my corpus. The first tempogram shows a number from before currents
 and the second shows one from after currents. It is interesting to note
@@ -2032,37 +2050,17 @@ be considered accessible and danceable. The decrease in tempo changes in
 songs after currents could support the hypothesis.</p>
 </div>
 </div>
-<div id="column-9" class="section level2" data-width="500">
+<div id="column-11" class="section level2" data-width="500">
 <h2>Column</h2>
 <div id="tempogram-1-elephant" class="section level3">
 <h3>Tempogram 1: elephant</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<p><img src="index_files/figure-html/unnamed-chunk-7-1.png" width="576" data-figure-id=fig7 /></p>
+<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" width="576" data-figure-id=fig8 /></p>
 </div>
 <div id="tempogram-2-borderline" class="section level3">
 <h3>Tempogram 2: borderline</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" width="576" data-figure-id=fig8 /></p>
-</div>
-</div>
-</div>
-<div id="chordograms" class="section level1">
-<h1>Chordograms</h1>
-<div id="column-10" class="section level2" data-width="500">
-<h2>Column</h2>
-<div id="text" class="section level3">
-<h3>Text</h3>
-<p>hshhss</p>
-</div>
-</div>
-<div id="column-11" class="section level2" data-width="500">
-<h2>Column</h2>
-<div id="chordogram" class="section level3">
-<h3>Chordogram</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2070,9 +2068,29 @@ songs after currents could support the hypothesis.</p>
 </div>
 </div>
 </div>
+<div id="chordograms" class="section level1">
+<h1>Chordograms</h1>
+<div id="column-12" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="text" class="section level3">
+<h3>Text</h3>
+<p>hshhss</p>
+</div>
+</div>
+<div id="column-13" class="section level2" data-width="500">
+<h2>Column</h2>
+<div id="chordogram" class="section level3">
+<h3>Chordogram</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<p><img src="index_files/figure-html/unnamed-chunk-10-1.png" width="576" data-figure-id=fig10 /></p>
+</div>
+</div>
+</div>
 <div id="summm" class="section level1">
 <h1>SUMMM</h1>
-<div id="column-12" class="section level2" data-width="500">
+<div id="column-14" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>In this visualization, you can see a comparison between the two
 groups within my chosen corpus: However, there is less variation than I
@@ -2081,7 +2099,7 @@ expected beforehand in terms of timbre values. However, the second value
 significantly different. I am going to delve further into what exactly
 this difference means and whether I can recognize it myself.</p>
 </div>
-<div id="column-13" class="section level2" data-width="500">
+<div id="column-15" class="section level2" data-width="500">
 <h2>Column</h2>
 <div id="track-level-summary" class="section level3">
 <h3>Track level summary</h3>
@@ -2104,7 +2122,7 @@ Timbre Coefficients”, y = ““, fill =”Genre”)</p>
 </div>
 <div id="conclusion" class="section level1">
 <h1>Conclusion</h1>
-<div id="column-14" class="section level2" data-width="1000">
+<div id="column-16" class="section level2" data-width="1000">
 <h2>Column</h2>
 <div id="conclusion-1" class="section level3">
 <h3>Conclusion</h3>
