--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,19 @@ window.FlexDashboardComponents.push({
 <h1>Dendrogram</h1>
 <div id="column" class="section level2" data-width="500">
 <h2>Column</h2>
-<p>hfsghKZg</p>
+<p>The dendrogram on the right you see a clustering analysis, in which I
+have divided my corpus into the two groups to be compared; songs from
+before currents and these from currents and after. The idea was to see
+to what extent in this analysis a separation could be seen between these
+two groups. Here and there we see some “correctly” clustered numbers;
+these are from the same corpus group (and often album, as in the middle
+blue chunk of numbers). Yet they are also occasionally mixed together.
+Nangs is a definite outlier, but this was to be expected. This song is
+the only one that is completely instrumental and can be classified more
+under “ambient” music rather than indie rock. Still, I wouldn’t know
+exactly why, for example, “sundown syndrome” and “eventually” are
+clustered so closely together. I might change my clustering method to
+see if this has any influence.</p>
 </div>
 <div id="column-1" class="section level2" data-width="500">
 <h2>Column</h2>
@@ -2088,8 +2100,8 @@ songs after currents could support the hypothesis.</p>
 </div>
 </div>
 </div>
-<div id="summm" class="section level1">
-<h1>SUMMM</h1>
+<div id="sum" class="section level1">
+<h1>SUM</h1>
 <div id="column-14" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>In this visualization, you can see a comparison between the two
