--- a/index.html
+++ b/index.html
@@ -1957,8 +1957,8 @@ because this category contains more songs.</p>
 <p>hfkhkanjbgkbnsjkBajkjv</p>
 </div>
 </div>
-<div id="chromagrammmmmmm" class="section level1">
-<h1>Chromagrammmmmmm</h1>
+<div id="chromagram" class="section level1">
+<h1>Chromagram</h1>
 <div id="column-2" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>Here is a chromagram of the song Lost in Yesterday. In this song from
@@ -1987,7 +1987,10 @@ synth-pop and funk in addition to psychedelic influences.</p>
 <h1>Ceptrogram</h1>
 <div id="column-4" class="section level2" data-width="500">
 <h2>Column</h2>
+<div id="text" class="section level3">
+<h3>text</h3>
 <p>hfsghKZg</p>
+</div>
 </div>
 <div id="column-5" class="section level2" data-width="500">
 <h2>Column</h2>
@@ -2000,8 +2003,8 @@ synth-pop and funk in addition to psychedelic influences.</p>
 </div>
 </div>
 </div>
-<div id="ssm" class="section level1">
-<h1>SSM</h1>
+<div id="self-similarity-matrices" class="section level1">
+<h1>Self similarity matrices</h1>
 <div id="column-6" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>posthumous forgiveness</p>
@@ -2084,7 +2087,7 @@ clustering method to see if this has any influence.</p>
 <h1>An interesting outlier</h1>
 <div id="column-12" class="section level2" data-width="500">
 <h2>Column</h2>
-<div id="text" class="section level3">
+<div id="text-1" class="section level3">
 <h3>Text</h3>
 <p>As</p>
 </div>
@@ -2100,8 +2103,8 @@ clustering method to see if this has any influence.</p>
 </div>
 </div>
 </div>
-<div id="sum" class="section level1">
-<h1>SUM</h1>
+<div id="track-level-summary" class="section level1">
+<h1>Track level summary</h1>
 <div id="column-14" class="section level2" data-width="500">
 <h2>Column</h2>
 <p>In this visualization, you can see a comparison between the two
@@ -2113,7 +2116,7 @@ this difference means and whether I can recognize it myself.</p>
 </div>
 <div id="column-15" class="section level2" data-width="500">
 <h2>Column</h2>
-<div id="track-level-summary" class="section level3">
+<div id="track-level-summary-1" class="section level3">
 <h3>Track level summary</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
